# PACT-Controls

./: CLAUDE.md  README.md  TODO.md  __init__.py  pyproject.toml
config/: default.toml  flight.toml
controller/: __init__.py  arbiter.py  gains.py  kalman.py  lqr.py
fault/: __init__.py  detector.py
hal/: __init__.py  base.py  gimbal.py
modes/: __init__.py  fsm.py
safety/: __init__.py  gates.py
scripts/: compute_gains.py  demo_controller.py
telemetry/: __init__.py  logger.py
tests/: test_fault.py  test_fsm.py  test_kalman.py  test_lqr.py  test_safety.py
types/: __init__.py  state.py
