[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "pact-controls"
version = "0.1.0"
description = "Gimbal control subsystem for the PACT ISS plume-detection payload"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
 
[tool.hatch.build.targets.wheel]
packages = ["pact_controls"]
